--- a/package.json
+++ b/package.json
@@ -4,16 +4,26 @@
   "private": true,
   "homepage": "https://SolonukhaVitalii.github.io/goit-react-hw-08-phonebook",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.5.0",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
     "gh-pages": "^3.1.0",
     "husky": "^5.1.3",
+    "json-server": "^0.16.3",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-scripts": "4.0.3",
+    "react-toastify": "^7.0.3",
+    "react-transition-group": "^4.4.1",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "shortid": "^2.2.16",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
@@ -41,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "redux-devtools-extension": "^2.13.9"
   }
 }
