--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "axios": "^0.21.1",
     "gh-pages": "^3.1.0",
     "husky": "^5.1.3",
-    "json-server": "^0.16.3",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
     "react": "^17.0.1",
@@ -32,8 +31,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "server": "json-server --delay 500 --port 4040 --watch db.json"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
