--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "homepage": "https://SolonukhaVitalii.github.io/goit-react-hw-08-phonebook",
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
     "@reduxjs/toolkit": "^1.5.0",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "fontsource-roboto": "^4.0.0",
     "gh-pages": "^3.1.0",
     "husky": "^5.1.3",
     "lint-staged": "^10.5.4",
@@ -16,7 +18,9 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.10.6",
     "react-toastify": "^7.0.3",
     "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
