--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "gh-pages": "^3.1.0",
     "husky": "^5.1.3",
     "lint-staged": "^10.5.4",
+    "modern-normalize": "^1.0.0",
     "prettier": "^2.2.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react-dom": "^17.0.2",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
